--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Test in Docker
 on: push
 jobs:
   cypress-run:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     # Cypress Docker image from https://hub.docker.com/r/cypress
     # with browsers pre-installed
     container:
